# compLab2

./: ButtonAdapter.h  CMakeLists.txt  FuncGraphsProvider.cpp  FuncGraphsProvider.h  OperatorHelper.h  ProvidersHandler.cpp  ProvidersHandler.h  README.md  main.cpp
qml/: Header.qml  LoadLabel.qml  MImage.qml  main.qml
